--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "realtime-chat-frontend",
+  "name": "p2p-chat-app",
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "description": "Decentralized peer-to-peer chat application with end-to-end encryption",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,7 +14,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "axios": "^1.3.4",
     "lucide-react": "^0.263.1",
     "clsx": "^1.2.1",
     "tailwind-merge": "^1.12.0"
@@ -30,5 +30,17 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
-  }
+  },
+  "keywords": [
+    "p2p",
+    "chat",
+    "webrtc",
+    "encryption",
+    "privacy",
+    "decentralized",
+    "react",
+    "vite"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 } 
